@@ -14,6 +14,7 @@ import net.minecraft.util.MathHelper;
 
 import java.util.*;
 
+@SuppressWarnings("unused")
 public class GOTTradeEntries {
 	public static final GOTTradeEntries BAELISH_BUY;
 	public static final GOTTradeEntries C_ALCHEMIST_BUY;
@@ -60,30 +61,21 @@ public class GOTTradeEntries {
 	public static final GOTTradeEntries YITI_BLACKSMITH_BUY;
 	public static final GOTTradeEntries YITI_MASON_BUY;
 
-	private static final int VALYRIAN_INGOT_SELL = 512;
-	private static final int GOLD_INGOT_SELL = 128;
-	private static final int SILVER_INGOT_SELL = 32;
-	private static final int VALYRIAN_INGOT_BUY = 768;
-	private static final int GOLD_INGOT_BUY = 192;
-	private static final int SILVER_INGOT_BUY = 48;
-	private static final int AMBER_SELL = 30;
-	private static final int AMETHYST_SELL = 20;
-	private static final int DIAMOND_SELL = 60;
-	private static final int EMERALD_SELL = 40;
-	private static final int OPAL_SELL = 30;
-	private static final int PEARL_SELL = 30;
-	private static final int RUBY_SELL = 30;
-	private static final int SAPPHIRE_SELL = 30;
-	private static final int TOPAZ_SELL = 20;
-	private static final int AMBER_BUY = 45;
-	private static final int AMETHYST_BUY = 30;
-	private static final int DIAMOND_BUY = 90;
-	private static final int EMERALD_BUY = 60;
-	private static final int OPAL_BUY = 45;
-	private static final int PEARL_BUY = 45;
-	private static final int RUBY_BUY = 45;
-	private static final int SAPPHIRE_BUY = 45;
-	private static final int TOPAZ_BUY = 30;
+	public static final GOTTradeEntries EMPTY_SELL = new GOTTradeEntries(TradeType.WE_CAN_BUY, Collections.emptyList());
+	public static final GOTTradeEntries EMPTY_BUY = new GOTTradeEntries(TradeType.WE_CAN_SELL, Collections.emptyList());
+
+	/* Зарегулированные пропорциональные цены */
+	private static final int VALYRIAN_INGOT = 512;
+	private static final int GOLD_INGOT = 128;
+	private static final int SILVER_INGOT = 32;
+	private static final int DIAMOND = 128;
+	private static final int EMERALD = 96;
+	private static final int AMBER = 64;
+	private static final int OPAL = 64;
+	private static final int RUBY = 64;
+	private static final int SAPPHIRE = 64;
+	private static final int TOPAZ = 64;
+	private static final int AMETHYST = 64;
 
 	private static final List<GOTTradeEntry> BAELISH_B_L = new ArrayList<>();
 	private static final List<GOTTradeEntry> C_ALCHEMIST_B_L = new ArrayList<>();
@@ -131,7 +123,7 @@ public class GOTTradeEntries {
 	private static final List<GOTTradeEntry> DAVOS_B_L = new ArrayList<>();
 
 	static {
-		BAELISH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.baelishDagger), 5000));
+		BAELISH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.baelishDagger), 5000, true));
 		C_ALCHEMIST_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.bottlePoison), 10));
 		C_ALCHEMIST_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.lingeringPotion, 1, 1), 128));
 		C_ALCHEMIST_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.lingeringPotion, 1, 10), 128));
@@ -252,9 +244,8 @@ public class GOTTradeEntries {
 		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(Items.iron_ingot), 9));
 		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.bronzeIngot), 6));
 		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.copperIngot), 3));
-		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.diamond), 25));
-		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.pearl), 25));
-		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.sapphire), 12));
+		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.diamond), DIAMOND, true));
+		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.sapphire), SAPPHIRE, true));
 		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.tinIngot), 3));
 		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(Items.coal, 2, 32767), 1));
 		C_BLACKSMITH_S_L.add(new GOTTradeEntry(new ItemStack(Items.leather), 2));
@@ -398,7 +389,7 @@ public class GOTTradeEntries {
 		C_FARMER_S_L.add(new GOTTradeEntry(new ItemStack(Items.stone_hoe), 1));
 		C_FARMER_S_L.add(new GOTTradeEntry(new ItemStack(Items.water_bucket), 4));
 		C_FISHMONGER_B_L.add(new GOTTradeEntry(new ItemStack(Blocks.sponge), 15));
-		C_FISHMONGER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.pearl), 50));
+		C_FISHMONGER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.pearl), 12));
 		C_FISHMONGER_B_L.add(new GOTTradeEntry(new ItemStack(Items.boat), 5));
 		C_FISHMONGER_B_L.add(new GOTTradeEntry(new ItemStack(Items.dye, 1, 0), 4));
 		C_FISHMONGER_B_L.add(new GOTTradeEntry(new ItemStack(Items.fish, 1, 0), 4));
@@ -444,29 +435,28 @@ public class GOTTradeEntries {
 		C_FLORIST_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.yitiFlower, 1, 2), 20));
 		C_FLORIST_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.yitiFlower, 1, 3), 20));
 		C_FLORIST_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.yitiFlower, 1, 4), 20));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.birdCage, 1, 2), SILVER_INGOT_BUY * 6));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.birdCage, 1, 3), GOLD_INGOT_BUY * 6));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.chandelier, 1, 2), SILVER_INGOT_BUY));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.chandelier, 1, 3), GOLD_INGOT_BUY));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.gobletGold), GOLD_INGOT_BUY * 2));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.gobletSilver), SILVER_INGOT_BUY * 2));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.goldBars), GOLD_INGOT_BUY));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.goldRing), GOLD_INGOT_BUY));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.silverBars), SILVER_INGOT_BUY));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.silverRing), SILVER_INGOT_BUY));
-		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianRing), VALYRIAN_INGOT_BUY));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.amber), AMBER_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.amethyst), AMETHYST_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.diamond), DIAMOND_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.emerald), EMERALD_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.opal), OPAL_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.pearl), PEARL_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.ruby), RUBY_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.sapphire), SAPPHIRE_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.silverIngot), SILVER_INGOT_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.topaz), TOPAZ_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianIngot), VALYRIAN_INGOT_SELL));
-		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(Items.gold_ingot), GOLD_INGOT_SELL));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.birdCage, 1, 2), SILVER_INGOT * 6, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.birdCage, 1, 3), GOLD_INGOT * 6, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.chandelier, 1, 2), SILVER_INGOT, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.chandelier, 1, 3), GOLD_INGOT, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.gobletGold), GOLD_INGOT * 2, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.gobletSilver), SILVER_INGOT * 2, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.goldBars), GOLD_INGOT, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.goldRing), GOLD_INGOT, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.silverBars), SILVER_INGOT, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.silverRing), SILVER_INGOT, true));
+		C_GOLDSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianRing), VALYRIAN_INGOT, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.amber), AMBER, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.amethyst), AMETHYST, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.diamond), DIAMOND, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.emerald), EMERALD, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.opal), OPAL, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.ruby), RUBY, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.sapphire), SAPPHIRE, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.silverIngot), SILVER_INGOT, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.topaz), TOPAZ, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianIngot), VALYRIAN_INGOT, true));
+		C_GOLDSMITH_S_L.add(new GOTTradeEntry(new ItemStack(Items.gold_ingot), GOLD_INGOT, true));
 		C_LUMBERMAN_B_L.add(new GOTTradeEntry(new ItemStack(Blocks.leaves, 1, 0), 2));
 		C_LUMBERMAN_B_L.add(new GOTTradeEntry(new ItemStack(Blocks.leaves, 1, 1), 4));
 		C_LUMBERMAN_B_L.add(new GOTTradeEntry(new ItemStack(Blocks.leaves, 1, 2), 3));
@@ -698,18 +688,17 @@ public class GOTTradeEntries {
 		C_MAESTER_S_L.add(new GOTTradeEntry(new ItemStack(Items.paper, 2), 1));
 		C_MAESTER_S_L.add(new GOTTradeEntry(new ItemStack(Items.saddle), 1));
 		C_MAESTER_S_L.add(new GOTTradeEntry(new ItemStack(Items.writable_book, 1), 4));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.amber), AMBER_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.amethyst), AMETHYST_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.diamond), DIAMOND_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.emerald), EMERALD_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.opal), OPAL_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.pearl), PEARL_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.ruby), RUBY_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.sapphire), SAPPHIRE_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.silverIngot), SILVER_INGOT_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.topaz), TOPAZ_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianIngot), VALYRIAN_INGOT_BUY));
-		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(Items.gold_ingot), GOLD_INGOT_BUY));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.amber), AMBER, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.amethyst), AMETHYST, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.diamond), DIAMOND, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.emerald), EMERALD, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.opal), OPAL, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.ruby), RUBY, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.sapphire), SAPPHIRE, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.silverIngot), SILVER_INGOT, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.topaz), TOPAZ, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianIngot), VALYRIAN_INGOT, true));
+		C_MINER_B_L.add(new GOTTradeEntry(new ItemStack(Items.gold_ingot), GOLD_INGOT, true));
 		C_MINER_S_L.add(new GOTTradeEntry(new ItemStack(Blocks.torch, 16), 2));
 		C_MINER_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.bronzePickaxe), 6));
 		C_MINER_S_L.add(new GOTTradeEntry(new ItemStack(GOTItems.deerCooked), 3));
@@ -857,20 +846,20 @@ public class GOTTradeEntries {
 		MOSSOVY_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(Items.chainmail_chestplate), 16));
 		MOSSOVY_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(Items.chainmail_leggings), 14));
 		MOSSOVY_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(Items.chainmail_boots), 10));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianBook), VALYRIAN_INGOT_BUY));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianDagger), VALYRIAN_INGOT_BUY));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianDaggerPoisoned), VALYRIAN_INGOT_BUY));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianHammer), VALYRIAN_INGOT_BUY * 4));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianSpear), VALYRIAN_INGOT_BUY));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianSword), VALYRIAN_INGOT_BUY * 3));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianHelmet), VALYRIAN_INGOT_BUY * 5));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChestplate), VALYRIAN_INGOT_BUY * 8));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianLeggings), VALYRIAN_INGOT_BUY * 7));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianBoots), VALYRIAN_INGOT_BUY * 4));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChainmailHelmet), VALYRIAN_INGOT_BUY * 4));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChainmailChestplate), VALYRIAN_INGOT_BUY * 6));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChainmailLeggings), VALYRIAN_INGOT_BUY * 6));
-		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChainmailBoots), VALYRIAN_INGOT_BUY * 3));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianBook), VALYRIAN_INGOT, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianDagger), VALYRIAN_INGOT, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianDaggerPoisoned), VALYRIAN_INGOT, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianHammer), VALYRIAN_INGOT * 4, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianSpear), VALYRIAN_INGOT, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianSword), VALYRIAN_INGOT * 3, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianHelmet), VALYRIAN_INGOT * 5, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChestplate), VALYRIAN_INGOT * 8, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianLeggings), VALYRIAN_INGOT * 7, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianBoots), VALYRIAN_INGOT * 4, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChainmailHelmet), VALYRIAN_INGOT * 4, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChainmailChestplate), VALYRIAN_INGOT * 6, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChainmailLeggings), VALYRIAN_INGOT * 6, true));
+		QOHOR_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.valyrianChainmailBoots), VALYRIAN_INGOT * 3, true));
 		SOTHORYOS_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.blacksmithHammer), 18));
 		SOTHORYOS_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTBlocks.bronzeBars, 8), 20));
 		SOTHORYOS_BLACKSMITH_B_L.add(new GOTTradeEntry(new ItemStack(GOTItems.sothoryosBattleaxe), 16));
@@ -1077,7 +1066,9 @@ public class GOTTradeEntries {
 
 		for (int i = 0; i < trades.length; ++i) {
 			ItemStack tradeItem = tempTrades[i].createTradeItem();
-			float tradeCost = tempTrades[i].getCost();
+			int originalCost = tempTrades[i].getCost();
+			float tradeCost = originalCost;
+			boolean frozenPrice = tempTrades[i].isFrozenPrice();
 			int tradeCostI;
 			if (tradeItem.getItem() instanceof GOTItemMug && ((GOTItemMug) tradeItem.getItem()).isBrewable() && tradeItem.getItemDamage() == 9999) {
 				tradeCostI = 1 + random.nextInt(3);
@@ -1098,7 +1089,7 @@ public class GOTTradeEntries {
 			tradeCost = Math.max(tradeCost, 1.0F);
 			tradeCostI = Math.round(tradeCost);
 			tradeCostI = Math.max(tradeCostI, 1);
-			trades[i] = new GOTTradeEntry(tradeItem, tradeCostI);
+			trades[i] = new GOTTradeEntry(tradeItem, frozenPrice ? originalCost : tradeCostI);
 		}
 		return trades;
 	}
