@@ -98,21 +98,23 @@ public class GOTBiomeDecorator {
 		addSoil(new WorldGenMinable(GOTBlocks.rock, 6, 12, Blocks.stone), 30.0f, 0, 64);
 		addOre(new WorldGenMinable(GOTBlocks.oreCopper, 8), 15.0f, 0, 128);
 		addOre(new WorldGenMinable(GOTBlocks.oreTin, 8), 15.0f, 0, 128);
-		addOre(new WorldGenMinable(GOTBlocks.oreSilver, 5), 8.0f, 0, 32);
-		addOre(new WorldGenMinable(Blocks.gold_ore, 4), 2.0f, 0, 32);
 		addOre(new WorldGenMinable(Blocks.coal_ore, 16), 40.0f, 0, 128);
 		addOre(new WorldGenMinable(Blocks.iron_ore, 8), 20.0f, 0, 64);
 		addOre(new WorldGenMinable(GOTBlocks.oreSulfur, 8), 2.0f, 0, 64);
 		addOre(new WorldGenMinable(GOTBlocks.oreSaltpeter, 8), 2.0f, 0, 64);
 		addOre(new WorldGenMinable(GOTBlocks.oreSalt, 12), 2.0f, 0, 64);
-		addGem(new WorldGenMinable(GOTBlocks.oreGem, 0, 6, Blocks.stone), 2.0f, 0, 64);
-		addGem(new WorldGenMinable(GOTBlocks.oreGem, 1, 6, Blocks.stone), 2.0f, 0, 64);
-		addGem(new WorldGenMinable(GOTBlocks.oreGem, 2, 4, Blocks.stone), 1.0f, 0, 32);
-		addGem(new WorldGenMinable(GOTBlocks.oreGem, 3, 4, Blocks.stone), 1.0f, 0, 32);
-		addGem(new WorldGenMinable(GOTBlocks.oreGem, 4, 5, Blocks.stone), 1.5f, 0, 48);
-		addGem(new WorldGenMinable(GOTBlocks.oreGem, 5, 4, Blocks.stone), 0.5f, 0, 16);
-		addGem(new WorldGenMinable(GOTBlocks.oreGem, 6, 5, Blocks.stone), 1.5f, 0, 48);
-		addGem(new WorldGenMinable(GOTBlocks.oreGem, 7, 4, Blocks.stone), 0.75f, 0, 24);
+
+		/* Зарегулированные пропорциональные цены */
+		addOre(new WorldGenMinable(GOTBlocks.oreSilver, 4), 8.0f, 0, 32);
+		addOre(new WorldGenMinable(Blocks.gold_ore, 4), 2.0f, 0, 32);
+		addGem(new WorldGenMinable(GOTBlocks.oreGem, 5, 4, Blocks.stone), 2.0f, 0, 32);
+		addGem(new WorldGenMinable(GOTBlocks.oreGem, 7, 4, Blocks.stone), 3.0f, 0, 32);
+		addGem(new WorldGenMinable(GOTBlocks.oreGem, 0, 4, Blocks.stone), 4.0f, 0, 32);
+		addGem(new WorldGenMinable(GOTBlocks.oreGem, 1, 4, Blocks.stone), 4.0f, 0, 32);
+		addGem(new WorldGenMinable(GOTBlocks.oreGem, 2, 4, Blocks.stone), 4.0f, 0, 32);
+		addGem(new WorldGenMinable(GOTBlocks.oreGem, 3, 4, Blocks.stone), 4.0f, 0, 32);
+		addGem(new WorldGenMinable(GOTBlocks.oreGem, 4, 4, Blocks.stone), 4.0f, 0, 32);
+		addGem(new WorldGenMinable(GOTBlocks.oreGem, 6, 4, Blocks.stone), 4.0f, 0, 32);
 	}
 
 	public void addFixedSettlement(GOTStructureBaseSettlement settlement) {
